[gd_scene load_steps=9 format=2]

[ext_resource path="res://hg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://objects/misc/world.tres" type="Environment" id=2]
[ext_resource path="res://menus/OptionMenu.gd" type="Script" id=3]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.658824, 0.235294, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[node name="OptionMenu" type="Node"]
script = ExtResource( 3 )

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.0
margin_top = 38.0905
margin_right = 117.0
margin_bottom = 112.09
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="glow" type="Label" parent="."]
anchor_left = 0.283
anchor_top = 0.333
anchor_right = 0.283
anchor_bottom = 0.333
margin_left = 0.358246
margin_top = -23.7608
margin_right = 287.358
margin_bottom = 24.2392
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.905882, 0.439216, 1, 1 )
text = "GLOW EFFECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="CheckButton" parent="glow"]
anchor_left = 1.473
anchor_top = 0.596
anchor_right = 1.473
anchor_bottom = 0.596
margin_left = 0.00500488
margin_top = -51.0125
margin_right = 76.005
margin_bottom = -0.0124512
rect_scale = Vector2( 2, 2 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Label" parent="."]
anchor_left = 0.284
anchor_top = 0.49
anchor_right = 0.284
anchor_bottom = 0.49
margin_left = -0.618774
margin_top = -23.7135
margin_right = 286.381
margin_bottom = 24.2865
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.905882, 0.439216, 1, 1 )
text = "MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="CheckButton" parent="music"]
anchor_left = 1.473
anchor_top = 0.596
anchor_right = 1.473
anchor_bottom = 0.596
margin_left = 0.00500488
margin_top = -51.0125
margin_right = 76.005
margin_bottom = -0.0124512
rect_scale = Vector2( 2, 2 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="Label" parent="."]
anchor_left = 0.283
anchor_top = 0.636
anchor_right = 0.283
anchor_bottom = 0.636
margin_left = 0.358246
margin_top = -24.1132
margin_right = 287.358
margin_bottom = 23.8868
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.905882, 0.439216, 1, 1 )
text = "FPS METER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="CheckButton" parent="fps"]
anchor_left = 1.473
anchor_top = 0.596
anchor_right = 1.473
anchor_bottom = 0.596
margin_left = 0.00500488
margin_top = -51.0125
margin_right = 76.005
margin_bottom = -0.0124512
rect_scale = Vector2( 2, 2 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.502
anchor_top = 0.82
anchor_right = 0.502
anchor_bottom = 0.82
margin_left = -75.0347
margin_top = -31.5414
margin_right = 73.9653
margin_bottom = 31.4586
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Admob" type="Node" parent="."]
script = ExtResource( 4 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9443221640471166/8614584209"
[connection signal="toggled" from="glow/glow" to="." method="_on_glow_toggled"]
[connection signal="toggled" from="music/music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="fps/fps" to="." method="_on_fps_toggled"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
